DB Get qilishda pagination
